<resources>
    <string name="app_name">Djaya</string>
    <string name="shortcut_name">Fundaid Djaya</string>
    <string name="hint_email">Email</string>
    <string name="hint_pwd">Password</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_not_member">Bukan Anggota? Daftar Disini.</string>
    <string name="text_forget">Lupa Password?</string>
    <string name="text_Username">Nama Lengkap</string>
    <string name="text_Umur">Umur</string>
    <string name="text_JenisKelamin">Jenis Kelamin</string>
    <string name="text_nKtp">No.Ktp</string>
    <string name="text_nRekening">No.Rekening</string>
    <string name="text_Register">Daftarkan.</string>
    <string name="text_batal">Batalkan</string>
    <string name="text_cancel">Batal</string>

    <!--list-->
    <string name="text_deskripsiImg">Gambar</string>
    <string name="text_namaUsaha">Nama Usaha</string>
    <string name="text_deskripsiUsaha">Deskripsi</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invest_not_available">Tidak Ada Investasi</string>

    <!--Teks di menu add_usaha-->
    <string name="text_judulAddUsaha">Daftarkan Usaha</string>
    <string name="text_nUsaha">Nama Usaha</string>
    <string name="text_nPUsaha">Nama Pengusaha</string>
    <string name="text_dUsaha">Deskripsi Usaha</string>
    <string name="text_uBulanan">Penghasilan Bulanan</string>
    <string name="text_modal">Butuh Modal</string>
    <string name="text_daftarUsaha">Daftarkan</string>
    <string name="text_noteUsaha">Pastikan Usaha yang anda bangun minimal 1 bulan.</string>
    <string name="text_noteDaftar">Untuk Menggunakan Layanan ini, anda harus berusia minimal 18 tahun.</string>


    <!--Teks di topup-->
    <string name="text_judulIsiUlang">Top Up Djaya Cash</string>
    <string name="blank">_____</string>
    <string name="Nama">Nama </string>
    <string name="Cash">Uang </string>
    <string name="text_inVoucher">Masukkan Kode Voucher</string>
    <string name="text_hintVoucher">Kode Voucher</string>
    <string name="text_conCode">qxy6372iihqb</string>
    <string name="text_nTopup">Topup</string>


    <string name="text_nProfil">Profil</string>
    <string name="text_pinjamkan">Pinjamkan</string>
    <string name="text_totPeminjaman">Total Peminjaman</string>

    <string name="text_nEmail">Email</string>

</resources>
