<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.pengusaha.add_usaha">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#ffc107"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30sp"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/namaUsaha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#dcdddd"
            android:hint="@string/text_nUsaha"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/deskripsiUsaha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#dcdddd"
            android:hint="@string/text_deskripsiUsaha"
            android:inputType="textLongMessage"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/hasilBulanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#dcdddd"
            android:hint="@string/text_uBulanan"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/butuhModal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#dcdddd"
            android:hint="@string/text_modal"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true" />

        <!--<Spinner
            android:id="@+id/katInvest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorGrey"
            android:padding="10dp"
            android:popupBackground="@color/colorWhite">
        </Spinner>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/btnModali"
            android:gravity="center"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_daftarUsaha" />

        <Button
            android:id="@+id/btnBatal"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_batal" />
    </LinearLayout>

</RelativeLayout>