<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="blank.djaja_works.view.login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:orientation="vertical">
            <!--<ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_holla_logo"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Fundaid Djaya"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="35dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30sp"
        >
        <!--Logo here-->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@color/colorPrimary"
            android:text="@string/text_login"
            android:textColor="@color/colorWhite"
            />

        <!-- Link to Login Screen -->
        <TextView
            android:id="@+id/textViewLinkLupa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/text_forget"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"/>
        <!--android:onClick="forgetClick"-->

        <TextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/text_not_member"
            android:textSize="16dp"
            android:textColor="@color/colorBlack"/>
        <!--android:onClick="regstrClick"-->
    </LinearLayout>

</LinearLayout>
