<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.Proposal"
    android:orientation="vertical"
    android:gravity="center">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_proposal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/colorBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:background="#ffc107"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96sp"
            android:layout_gravity="center_vertical"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="10sp">

            <TextView
                android:id="@+id/nama_usaha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_namaUsaha"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="normal|bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="@color/GreyLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:text="@string/text_nPUsaha"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/nama_pengusaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="15dp"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Saldo"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/tot_pinjaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Durasi Pembayaran"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/durasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/text_deskripsiUsaha"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_ln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/curve_shape3"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/deskUsaha"
                    android:layout_width="match_parent"
                    android:layout_height="90sp"
                    android:text="@string/text_deskripsiUsaha"
                    android:textSize="12sp"
                    android:textColorHint="@color/GreyLight"
                    android:textColor="@color/colorBlack" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:gravity="start|bottom">
        <Button
            android:id="@+id/btnTunjang"
            android:gravity="center_vertical|start"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/text_pinjamkan"
            android:textColor="@color/GreyLight"
            android:background="@color/colorBrown"/>
    </LinearLayout>
</LinearLayout>